excercise 11 solution added

--- a/Python_Practice.ipynb
+++ b/Python_Practice.ipynb
@@ -416,11 +416,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 11\n",
+    "Ask the user for a number and determine whether the number is prime or not. (For those who have forgotten, a prime number is a number that has no divisors.). You can (and should!) use your answer to Exercise 4 to help you. Take this opportunity to practice using functions, described below."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def primecheck(num):\n",
+    "    for loopvar in range(2,num):\n",
+    "        if num%loopvar == 0:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a number: 97\n",
+      "97 is a Prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"Please enter a number: \"))\n",
+    "if primecheck(num):\n",
+    "    print(f\"{num} is a Prime number\")\n",
+    "else:\n",
+    "    print(f\"{num} is a NOT a Prime number\")"
+   ]
   }
  ],
  "metadata": {
