excercise 12 solution added

--- a/Python_Practice.ipynb
+++ b/Python_Practice.ipynb
@@ -439,15 +439,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a number: 97\n",
-      "97 is a Prime number\n"
+      "Please enter a number: 123\n",
+      "123 is a NOT a Prime number\n"
      ]
     }
    ],
@@ -457,6 +457,48 @@
     "    print(f\"{num} is a Prime number\")\n",
     "else:\n",
     "    print(f\"{num} is a NOT a Prime number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 12:\n",
+    "Write a program that takes a list of numbers (for example, a = [5, 10, 15, 20, 25]) and makes a new list of only the first and last elements of the given list. For practice, write this code inside a function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def firstandlast(nums):\n",
+    "    newlist = []\n",
+    "    newlist.append(nums[0])\n",
+    "    newlist.append(nums[-1])\n",
+    "    return newlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 25]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [5, 10, 15, 20, 25]\n",
+    "firstandlast(a)"
    ]
   }
  ],
