--- a/Python_Practice.ipynb
+++ b/Python_Practice.ipynb
@@ -425,13 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def primecheck(num):\n",
     "    for loopvar in range(2,num):\n",
     "        if num%loopvar == 0:\n",
+    "            print(f\"Divisable by {loopvar}\")\n",
     "            return False\n",
     "    else:\n",
     "        return True"
@@ -439,15 +440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a number: 123\n",
-      "123 is a NOT a Prime number\n"
+      "Please enter a number: 10001\n",
+      "Divisable by 73\n",
+      "10001 is a NOT a Prime number\n"
      ]
     }
    ],
@@ -482,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +495,7 @@
        "[5, 25]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,6 +504,89 @@
     "a = [5, 10, 15, 20, 25]\n",
     "firstandlast(a)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 13:\n",
+    "Write a program that asks the user how many Fibonnaci numbers to generate and then generates them. Take this opportunity to think about how you can use functions. Make sure to ask the user to enter the number of numbers in the sequence to generate.(Hint: The Fibonnaci seqence is a sequence of numbers where the next number in the sequence is the sum of the previous two numbers in the sequence. The sequence looks like this: 1, 1, 2, 3, 5, 8, 13, …)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fibonnaci(count):\n",
+    "    if count <= 1:\n",
+    "        return 1\n",
+    "    else: \n",
+    "        return fibonnaci(count-1) + fibonnaci(count-2) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = int(input(\"Enter number of values you want to print in series: \"))\n",
+    "for loopvar in range(1,num+1):\n",
+    "    print(fibonnaci(loopvar))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 14:\n",
+    "Write a program (function!) that takes a list and returns a new list that contains all the elements of the first list minus all the duplicates.\n",
+    "\n",
+    "Extras:\n",
+    "\n",
+    "Write two different functions to do this - one using a loop and constructing a list, and another using sets.\n",
+    "Go back and do Exercise 5 using sets, and write the solution for that in a different function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removedupfromlist(lst):\n",
+    "    return set(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
