--- a/Python_Practice.ipynb
+++ b/Python_Practice.ipynb
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,9 +528,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of values you want to print in series: 8\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input(\"Enter number of values you want to print in series: \"))\n",
     "for loopvar in range(1,num+1):\n",
@@ -552,27 +568,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def removedupfromlist(lst):\n",
-    "    return set(num)"
+    "def removedupfromlist1(lst):\n",
+    "    return list(set(lst))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-37-fdf6c6f8bc00>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-37-fdf6c6f8bc00>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    nl.append(x) for x in lst if x not in nl\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def removedupfromlist2(lst):\n",
+    "    nl = []\n",
+    "    nl.append(x) for x in lst if x not in nl\n",
+    "    return nl"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None, None, None, None, None, None, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1,22,2,3,3,4,5,7,5]\n",
+    "removedupfromlist2(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "22\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "7\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "removeDupList(lst)"
+   ]
   },
   {
    "cell_type": "code",
