before excercise 11-may-19

--- a/Python_Practice.ipynb
+++ b/Python_Practice.ipynb
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,36 +578,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-37-fdf6c6f8bc00>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-37-fdf6c6f8bc00>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    nl.append(x) for x in lst if x not in nl\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def removedupfromlist2(lst):\n",
     "    nl = []\n",
-    "    nl.append(x) for x in lst if x not in nl\n",
+    "    [nl.append(x) for x in lst if x not in nl]\n",
     "    return nl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[None, None, None, None, None, None, None]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 22, 2, 3, 4, 5, 7]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -617,27 +611,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "22\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "7\n",
-      "5\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 7, 22]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "removeDupList(lst)"
+    "removedupfromlist1(lst)"
    ]
   },
   {
