--- a/Python_Practice.ipynb
+++ b/Python_Practice.ipynb
@@ -630,6 +630,186 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 15\n",
+    "Write a program (using functions!) that asks the user for a long string containing multiple words. Print back to the user the same string, except with the words in backwards order. For example, say I type the string:\n",
+    "\n",
+    "  My name is Michele\n",
+    "Then I would see the string:\n",
+    "\n",
+    "  Michele is name My"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name: Tuhin mEra naam hai\n",
+      "hai naam mEra Tuhin\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = input(\"Enter your name: \")\n",
+    "splitStr = str.split()\n",
+    "list = splitStr[::-1]\n",
+    "print(\" \".join(list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Excercise 16:\n",
+    "Write a password generator in Python. Be creative with how you generate passwords - strong passwords have a mix of lowercase letters, uppercase letters, numbers, and symbols. The passwords should be random, generating a new password every time the user asks for a new password. Include your run-time code in a main method.\n",
+    "\n",
+    "Extra:\n",
+    "\n",
+    "Ask the user how strong they want their password to be. For weak passwords, pick a word or two from a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "num = random.randint(2,6)\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 16:\n",
+    "Write a password generator in Python. Be creative with how you generate passwords - strong passwords have a mix of lowercase letters, uppercase letters, numbers, and symbols. The passwords should be random, generating a new password every time the user asks for a new password. Include your run-time code in a main method.\n",
+    "\n",
+    "Extra:\n",
+    "\n",
+    "Ask the user how strong they want their password to be. For weak passwords, pick a word or two from a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random as rand\n",
+    "\n",
+    "lowercase = [\"a\", \"b\", \"c\", \"d\", \"e\" ,\"f\" ,\"g\", \"h\", \"i\", \"j\", \"k\", \"l\" , \"m\",\n",
+    "              \"n\", \"o\", \"p\", \"q\", \"r\", \"s\", \"t\", \"u\", \"v\", \"w\", \"x\", \"y\", \"z\"]\n",
+    "uppercase = [var.upper() for var in lowercase]\n",
+    "numbers = ['0','1','2','3','4','5','6','7','8','9','0']\n",
+    "symbols = [\"!\", \"£\", \"$\", \"@\", \"&\", \"*\", \"_\"]\n",
+    "weakpasswords = [\"lollipop\", \"icecream\", \"tractor\", \"millipede\"]\n",
+    "\n",
+    "def passwordgen():\n",
+    "    password = []\n",
+    "    password.append(rand.sample(uppercase,3))\n",
+    "    password.append(rand.sample(lowercase,3))\n",
+    "    password.append(rand.sample(numbers,3))\n",
+    "    password.append(rand.sample(symbols,2))\n",
+    "    #print(password)\n",
+    "    newpassword = [item for sublist in password for item in sublist]\n",
+    "    #print(newpassword)\n",
+    "    rand.shuffle(newpassword)\n",
+    "    str = ''.join(newpassword)\n",
+    "    print(f\"New Generated Password is: {str}\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do you wnat to generate a password? (Y/N)Y\n",
+      "what is password type? (strong/weak)weak\n",
+      "new password is: lollipop\n"
+     ]
+    }
+   ],
+   "source": [
+    "ip = input(\"Do you wnat to generate a password? (Y/N)\")\n",
+    "if ip == \"N\":\n",
+    "    print(\"Thank you!\")\n",
+    "elif ip == 'Y':\n",
+    "    passtype = input(\"what is password type? (strong/weak)\")\n",
+    "    if passtype == 'strong':\n",
+    "        passwordgen()\n",
+    "    elif passtype == 'weak':\n",
+    "        weakpw = rand.sample(weakpasswords, 1)\n",
+    "        print(f\"new password is: {weakpw[0]}\")\n",
+    "    else:\n",
+    "        print(\"Incorrect Input\")\n",
+    "else:\n",
+    "    print(\"Incorrect Input\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
